--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "csv-parse": "^5.3.3",
     "debug": "~2.6.9",
     "express": "~4.16.1",
-    "http-errors": "~1.6.3",
+    "http-errors": "^2.0.0",
     "jade": "~1.11.0",
     "morgan": "~1.9.1",
     "mysql": "^2.18.1",
